# py-tree-sitter-epics

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: changelog.md  conf.py  epicsdb.md  index.md
py_tree_sitter_epics/: epicsdb.py
tests/: __init__.py  depict.code-workspace  test.py  test_dbparser_integration.py  test_epicsdb.py
tests/misc/: example.template
