[project]
name = "py-tree-sitter-epics"
version = "0.3.0"
description = "Facilitate tree-sitter-epics parsing in python"
readme = "README.md"
authors = [
	{ name = "Alexis Gaget", email = "alexis.gaget@cea.fr" },
	{ name = "Rémi Nicole", email = "remi.nicole@cea.fr" },
]
maintainers = [
	{ name = "Alexis Gaget", email = "alexis.gaget@cea.fr" },
	{ name = "Rémi Nicole", email = "remi.nicole@cea.fr" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["epics", "tree-sitter"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Topic :: Documentation",
	"Topic :: Documentation :: Sphinx",
	"Framework :: Sphinx",
	"Framework :: Sphinx :: Domain",
	"Framework :: Sphinx :: Extension",
]
requires-python = ">= 3.10"
dependencies = [
	"tree-sitter>=0.25.2",
	"tree-sitter-epics-db>=0.2.0",
	"pytest>=8.4",
]

[project.optional-dependencies]
docs = ["sphinx", "furo", "myst-parser"]

[project.urls]
Documentation = "https://py-tree-sitter-epics.readthedocs.io/en/stable/"
Changelog = "https://py-tree-sitter-epics.readthedocs.io/en/stable/changelog.html"
Issues = "https://github.com/epics-extensions/py-tree-sitter-epics/issues"
Source = "https://github.com/epics-extensions/py-tree-sitter-epics"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "py_tree_sitter_epics" }]

[tool.ruff]
select = ["ALL"]
ignore = [
	# one-blank-line-before-class
	"D203",
	# multi-line-summary-second-line
	"D213",
]
